src/objects/SOQL_Tree__c.object
<CustomObject>
    <fields>
        <fullName>Field_Aggregate_Function__c</fullName>
        <label>Field Aggregate Function</label>
        <picklist>
            <picklistValues>
                <fullName>SUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COUNT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_Aggregate_Value__c</fullName>
        <label>Field Aggregate Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Source__c</fullName>
        <label>Field Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SOQL Trees</relationshipLabel>
        <relationshipName>SOQL_Trees</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SOQL_Report__c</fullName>
        <label>SOQL Report</label>
        <referenceTo>SOQL_Report__c</referenceTo>
        <relationshipLabel>SOQL Trees</relationshipLabel>
        <relationshipName>SOQL_Trees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tree_Name__c</fullName>
        <label>Tree Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tree_Object__c</fullName>
        <label>Tree Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tree_Report_Label__c</fullName>
        <label>Tree Report Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>SOQL Tree</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TREE-{0000}</displayFormat>
        <label>Tree Object ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOQL Trees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>